# but-better

./: .pre-commit-config.yaml  LICENSE  README.md  Your Code But Better.ipynb  pyproject.toml
but_better/: __init__.py
tests/: test_but_better.py
