[tool.poetry]
name = "but-better"
version = "0.1.0"
description = "Your code but better"
authors = [
    "Carlos Trujillo <carlos.trujillo@pymc-labs.com>",
    "Niall Oulton <niall.oulton@1749.io>",
    "Ulf Aslak Lai <ulfaslak@gmail.com>",
    "Will Dean <wd60622@gmail.com>", 
]
repository = "https://github.com/wd60622/but-better/"
readme = "README.md"
packages = [
    { include = "but_better" }, 
    { include = "but_better/py.typed" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.9"
ipython = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
rich = "^13.7.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=but_better --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
